--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
     <head>
         <meta charset="utf-8">
         <title>Javascript Lessons</title>
-        <script src="script.js"></script>
 
     </head>
 
     <body>
-        
+
+<button>Press me</button>
+<div id="greeting"></div>
+
+<script>
+    const btn = document.querySelector("button");
+
+
+function greet() {
+    const name = prompt("What is your name?");
+    const greeting = document.querySelector("#greeting");
+    greeting.textContent = `Hello ${name}, nice to see you!`;
+}
+
+btn.addEventListener("click", greet);
+</script>
+
+
+
+
     </body>
 </html>
