--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 function greet() {
     const name = prompt("What is your name?");
     const greeting = document.querySelector("#greeting");
-    greeting.textContent = `Hello ${name}, nice to see you!`;
+    if (new Date().getHours() < 12){
+        greeting.textContent = `Good Morning ${name}, nice to see you!`;
+    } else if (new Date().getHours() < 16) {
+        greeting.textContent = `Good Afternoon ${name}, nice to see you!`;
+    } else {
+        greeting.textContent = `Good Evening ${name}, nice to see you!`;
+    }
 }
 
 btn.addEventListener("click", greet);
