--- a/index.html
+++ b/index.html
@@ -7,28 +7,48 @@
     </head>
 
     <body>
+        <label for="weather">Select the weather type today:</label>
+        <select id="weather">
+            <option value="">--Make a choice--</option>
+            <option value="sunny">Sunny</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowing">Snowing</option>
+            <option value="overcast">Overcast</option>
+        </select>
 
-<button>Press me</button>
-<div id="greeting"></div>
+        <p></p>
 
-<script>
-    const btn = document.querySelector("button");
+        <script>
+
+            const select = document.querySelector("select");
+            const para = document.querySelector("p");
+
+            select.addEventListener("change", setWeather);
+            
+            function setWeather() {
+                const choice = select.value;
+
+                if (choice === "sunny") {
+                    para.textContent = "It's nice and sunny outside today. Wear shorts!Go to the beach, or to the park, and get an ice cream.";
+                }
+                else if (choice === "rainy") {
+                    para.textContent = "Rain is falling outside; take a raincoat and an umbrella, and don't stay out for too long!";
+                }
+                else if (choice === "snowing") {
+                    para.textContent = "The snow is coming down - it is freezing! Best to stay in with a cup of hot chocolate, or go build a snowman.";
+                }
+                else if (choice === "overcast") {
+                    para.textContent = "It isn't raining, but the sky is grey and gloomy; it could turn any minute, so take a rain coat just in case.";
+                }
+                else {
+                    para.textContent = "";
+                }
+            
+
+            }
 
 
-function greet() {
-    const name = prompt("What is your name?");
-    const greeting = document.querySelector("#greeting");
-    if (new Date().getHours() < 12){
-        greeting.textContent = `Good Morning ${name}, nice to see you!`;
-    } else if (new Date().getHours() < 16) {
-        greeting.textContent = `Good Afternoon ${name}, nice to see you!`;
-    } else {
-        greeting.textContent = `Good Evening ${name}, nice to see you!`;
-    }
-}
-
-btn.addEventListener("click", greet);
-</script>
+        </script>
 
 
 
