--- a/index.html
+++ b/index.html
@@ -7,46 +7,73 @@
     </head>
 
     <body>
-        <label for="weather">Select the weather type today:</label>
+        <label for="weather">Select month:</label>
         <select id="weather">
             <option value="">--Make a choice--</option>
-            <option value="sunny">Sunny</option>
-            <option value="rainy">Rainy</option>
-            <option value="snowing">Snowing</option>
-            <option value="overcast">Overcast</option>
+            <option value="January">January</option>
+            <option value="February">February</option>
+            <option value="March">March</option>
+            <option value="April">April</option>
+            <option value="May">May</option>
+            <option value="June">June</option>
+            <option value="July">July</option>
+            <option value="August">August</option>
+            <option value="September">September</option>
+            <option value="October">October</option>
+            <option value="November">November</option>
+            <option value="December">December</option>
         </select>
 
-        <p></p>
+        <ul>
+            <li></li>
+        </ul>
+
+        <h1></h1>
 
         <script>
 
-            const select = document.querySelector("select");
-            const para = document.querySelector("p");
+            const select = document.querySelector('select');
+            const list = document.querySelector('ul');
+            const h1 = document.querySelector('h1');
 
-            select.addEventListener("change", setWeather);
-            
-            function setWeather() {
-                const choice = select.value;
+            select.addEventListener('change', () => {
+            const choice = select.value;
 
-                if (choice === "sunny") {
-                    para.textContent = "It's nice and sunny outside today. Wear shorts!Go to the beach, or to the park, and get an ice cream.";
-                }
-                else if (choice === "rainy") {
-                    para.textContent = "Rain is falling outside; take a raincoat and an umbrella, and don't stay out for too long!";
-                }
-                else if (choice === "snowing") {
-                    para.textContent = "The snow is coming down - it is freezing! Best to stay in with a cup of hot chocolate, or go build a snowman.";
-                }
-                else if (choice === "overcast") {
-                    para.textContent = "It isn't raining, but the sky is grey and gloomy; it could turn any minute, so take a rain coat just in case.";
-                }
-                else {
-                    para.textContent = "";
-                }
-            
+            switch(choice) {
 
+                case "January":
+                case "March":
+                case "May":
+                case "July":
+                case "August":
+                case "October":
+                case "December":
+                    days = 31;
+                    break;
+                case "February":
+                    days = 28;
+                    break;
+                default:
+                    days = 30;
             }
 
+
+            // ADD CONDITIONAL HERE
+
+            createCalendar(days, choice);
+            });
+
+            function createCalendar(days, choice) {
+            list.innerHTML = '';
+            h1.textContent = choice;
+            for (let i = 1; i <= days; i++) {
+                const listItem = document.createElement('li');
+                listItem.textContent = i;
+                list.appendChild(listItem);
+            }
+            }
+
+            createCalendar(31,'January');
 
         </script>
 
