--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Javascript Lessons</title>
+        <link rel="stylesheet" href="styles.css">
 
     </head>
 
@@ -24,11 +25,13 @@
             <option value="December">December</option>
         </select>
 
+        <h1></h1>
+
         <ul>
             <li></li>
         </ul>
 
-        <h1></h1>
+        
 
         <script>
 
@@ -41,7 +44,7 @@
 
             switch(choice) {
 
-                case "January":
+                case "January":  //switch fall-through, no break statement//
                 case "March":
                 case "May":
                 case "July":
